# hdf5-data-loader-concept

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  build.sh  dump.txt  package-lock.json  package.json
hdf5-sys/: Cargo.toml  build.rs  tzset.h
rust/: Cargo.toml
rust/hdf5-sys/: build.rs  env.h  lck.h  wrapper.h
rust/hdf5-sys/hdf5_with_plugins/: CMakeLists.txt  script.sh
rust/hdf5-sys/hdf5_with_plugins/LZF/config/: CMakeLists.txt
rust/hdf5-sys/hdf5_with_plugins/LZF/src/: CMakeLists.txt  H5Zlzf.c
rust/hdf5-sys/src/: lib.rs
rust/src/: dlopen_stub.rs  hdf5.rs  lib.rs  local.rs  log.rs  messages.rs  wasm_vfs.rs
src/: index.ts  lib.rs  wasm_vfs.rs
wit/: loader.wit
