[package]
name = "foxglove-data-loader"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
foxglove = { version = "0.9.0", default-features = false, features = [ "derive" ] }
foxglove_data_loader = "0.1.0"
hdf5-sys = { path = "./hdf5-sys/" }
serde_json = "1.0.143"
smallvec = "1.15.1"

[[bin]]
name = "local"
path = "src/local.rs"
